Added admin password for admin login
